@@ -1,7 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 0.3.6
 Date: ????
-  Changes:
+  Bugfixes:
+    - Nullius now has injected recipes to match the asteroid mining drones.
 ---------------------------------------------------------------------------------------------------
 Version: 0.3.5
 Date: 2024-06-26
